--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #c5c5c5;
+  background-color: #ffffff;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -24,8 +24,6 @@
   color: rgb(0, 0, 0);
   
 }
-
-
 
 .App-link {
   color: #61dafb;
@@ -41,11 +39,11 @@
 }
 
 body {
-  background-color: #51e0a7;
+  background-color: #61B32A;
 }
 
 .vraag{
-  background-color: #c5c5c5;
+  background-color: #ffffff;
   margin: 90px;
   display: flex;
   flex-direction: column;
