--- a/src/App.css
+++ b/src/App.css
@@ -38,17 +38,17 @@ body {
 
 .vraag{
   background-color: #e3e3e3;
-  margin: 70px;
-  display: flex;
+  margin: 90px;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 40px;
+  padding:15px;
   border-radius: 10px;
 }
 
-.imgButton{
-  width: 5%;
+.imgButton1{
+  margin-top: 10px;
+  float: right;
+  width: 4%;
+  justify-content: center;
 }
 
 .checkboxinvis{
