--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ body {
   flex-direction: column;
   padding:15px;
   border-radius: 10px;
+
 }
 
 .imgButton1{
@@ -54,3 +55,22 @@ body {
 .checkboxinvis{
   opacity:0;
 }
+
+.thermo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  text-align: center;
+}
+.advies{
+  background-color: #e3e3e3;
+  margin: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  border-radius: 10px;
+}
+
